fixed expression in datepicker.js fixed pixel alignment

--- a/app/assets/stylesheets/themes/responsive-dropdown.css.scss
+++ b/app/assets/stylesheets/themes/responsive-dropdown.css.scss
@@ -22,7 +22,7 @@
     left: 0;
     padding: 2%;
     position: absolute;
-    top: 4.3em;
+    top: 53px;
     width: 96%; 
 }
 #controllers > li {
@@ -49,7 +49,7 @@
 #controllers > li > a {
     color: #333333;
     display: block;
-    font-size: 1.3em;
+    font-size: 16px;
     line-height: 3em;
     padding: 0 15px;
     text-transform: uppercase;
